# Celes

./: Celes-0.1-Spec.md  Celes-0.1.4-Spec.md  README.md  celes-editor.html  celes-lang-0.1.4.vsix
celes-0.1.0/: PKG-INFO  README.celes  README.md  pyproject.toml  setup.py
celes-0.1.0/celes/: __init__.py  __main__.py  celes_to_md.py  cli.py  core.py  parser.py  validator.py
celes-0.1.0/celes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
celes-browser/: celes-parser.js  content.js  manifest.json  popup.html  popup.js
celes-desktop/: build.bat  celes-desktop.spec  main.py  requirements.txt
celes-desktop/assets/: editor.html
celes-vscode/: README.md  celes-lang-0.1.0.vsix  celes-lang-0.1.4.vsix  language-configuration.json  package-lock.json  package.json
celes-vscode/snippets/: celes.json
celes-vscode/src/: extension.js
celes-vscode/syntaxes/: celes.tmLanguage.json
spec/: Celes-0.1.5-NewTags.md
