[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celes"
version = "0.1.3"
description = "Celes 0.1 — a tag-based markup language toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "SOCL" }
keywords = ["markup", "language", "markdown", "parser", "celes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup",
]

[project.scripts]
celes = "celes.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["celes*"]
